--- a/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/components/widgets/base.htm
@@ -6,7 +6,7 @@
 <!-- /ko -->
 
 <!-- ko if: !configForm  && state === 'report' -->
-<!-- ko if: !ko.unwrap(hideEmptyNodes) || ko.unwrap(hideEmptyNodes) === true && displayValue() -->
+<!-- ko if: !ko.unwrap(hideEmptyNodes) || (ko.unwrap(hideEmptyNodes) === true && displayValue()) -->
 {% block report %}
 <dt data-bind="text: label()"></dt>
 <dd data-bind="text: displayValue() || $root.translations.none"></dd>
