15 - Reworked submission and LG resource models, resolved acronyms dev - Removed generic resource models 36 - Updated splash image to Grist Mill

--- a/src/arches_bchp/arches_bchp/templates/index.htm
+++ b/src/arches_bchp/arches_bchp/templates/index.htm
@@ -163,7 +163,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <!-- SLIDE 1 -->
                             <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                                 <!-- MAIN IMAGE -->
-                                <img src="{% webpack_static 'img/front/bowen_cabin.jpg' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+<!--                                <img src="{% webpack_static 'img/front/EC1-CARRfront4x6.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">-->
+<!--                                <img src="{% webpack_static 'img/front/BV1-STREETwSTAGE5x7.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">-->
+                                <img src="{% webpack_static 'img/front/GM4-INtheMILL5x6.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">
                                 <!-- LAYERS -->
                                 <!-- NEW LAYER -->
                                 <div class="tp-caption sft start text-bold v5-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
