411 - Change BC Fossils -> BC Fossil

--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -68,7 +68,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <img class="navbar-brand-v5-icon" src="{% webpack_static 'img/logo/BCID_H_gry_rev_clipped.png' %}" alt="Arches Logo">
                     </div>
                     <div class="application-name">
-                        <h1>{% blocktrans %}BC Fossils Management System{% endblocktrans %}</h1>
+                        <h1>{% blocktrans %}BC Fossil Management System{% endblocktrans %}</h1>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <!-- LAYERS -->
                             <!-- NEW LAYER -->
                             <div class="tp-caption sft start text-bold v5-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
-                                <h2>{% blocktrans %}BC Fossils Management System{% endblocktrans %}</h2>
+                                <h2>{% blocktrans %}BC Fossil Management System{% endblocktrans %}</h2>
                                 <p>{% trans "Providing information, guidance and policies to support" %}</p>
                                 <p>{% trans "protection and management of fossils and fossil sites in B.C." %}</p>
                             </div>
