391 - Fix details view for renamed cards 395 - Add additional image descriptions for resolution post-mvp 320 - Added is official site flag

--- a/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
+++ b/src/arches_bchp/arches_bchp/templates/views/report-templates/bcrhp_site.htm
@@ -262,7 +262,7 @@
                         <!-- /ko -->
                     </div>
                     <div class="bcrhp-grid-item grid-col-2 grid-row-2">
-                        <!-- ko let: { card: getCardWithName('BC Right') } -->
+                        <!-- ko let: { card: getCardWithName('Official Recognition Information') } -->
                         <!-- ko let: { widget: getWidgetWithLabel(card, 'Registry Types') } -->
                         <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
                         <dl class="dl-horizontal dl-horizontal-bc"
@@ -287,7 +287,7 @@
                         <!-- /ko -->
                     </div>
                     <div class="bcrhp-grid-item grid-col-2 grid-row-3">
-                        <!-- ko let: { card: getCardWithName(['BC Right', 'Designation or Protection']) } -->
+                        <!-- ko let: { card: getCardWithName(['Official Recognition Information', 'Official Recognition Details']) } -->
                         <!-- ko let: { widget: getWidgetWithLabel(card, 'Authority') } -->
                         <!-- ko if: !!card.tiles && card.tiles().length > 0 -->
                         <dl class="dl-horizontal dl-horizontal-bc">
@@ -315,7 +315,7 @@
                     </div>
 
                     <div class="bcrhp-grid-item bcrhp-full-width-grid-item bc-top-offset">
-                        <!-- ko let: { card: getCardWithName('BC Statement of Significance') } -->
+                        <!-- ko let: { card: getCardWithName('Statement of Significance') } -->
                         <!-- ko let: { widget: getWidgetWithLabel(card, 'Significance Description') } -->
                         <!-- ko foreach: { data: card.tiles, as: 'tile' } -->
                         <dl class="dl-horizontal dl-horizontal-bc" data-bind="css: {'provisional': ko.unwrap(tile.provisionaledits) !== null && tile.userisreviewer === false}">
