--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'BCSans';
+    font-style: normal;
+    src: url('fonts/BCSans/BCSans-Regular.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('fonts/BCSans/BCSans-Regular.woff') format('woff'); /* Modern Browsers */
+}
+@font-face {
+    font-family: 'BCSans';
+    font-style: italic;
+    src: url('fonts/BCSans/BCSans-Italic.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('fonts/BCSans/BCSans-Italic.woff') format('woff'); /* Modern Browsers */
+}
+@font-face {
+    font-family: 'BCSans';
+    font-weight: 700;
+    src: url('fonts/BCSans/BCSans-Bold.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('fonts/BCSans/BCSans-Bold.woff') format('woff'); /* Modern Browsers */
+}
+@font-face {
+    font-family: 'BCSans';
+    font-style: italic;
+    font-weight: 700;
+    src: url('fonts/BCSans/BCSans-BoldItalic.woff2') format('woff2'), /* Optimized for very modern browsers */
+    url('fonts/BCSans/BCSans-BoldItalic.woff') format('woff'); /* Modern Browsers */
+}
+
+body, h1, h2, h3, h4, h5
+{
+    font-family: 'BCSans', 'Open Sans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+}
+
 .hover-feature-nav-right + .hover-feature-title {
     width: 100%;
 }
@@ -28,6 +59,7 @@
 .jstree-anchor {
     height: 100% !important;
 }
+
 
 
 
@@ -97,7 +129,19 @@ table.bc-summary-table td {
 .dl-horizontal dt, .dl-horizontal dd {
     vertical-align: top;
     display: inline-block;
-    padding: 5px 5px 5px 20px;
+    padding: 2px 5px 2px 20px;
+}
+
+.rp-card-section .rp-report-tile .dl-horizontal dd {
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+hr {
+    margin: 10px 0;
+}
+
+.rp-card-section {
+    margin: 5px 20px;
 }
 
 .form-boolean-checkbox span {
@@ -142,4 +186,20 @@ table.bc-summary-table td {
         margin-right: 5px;
     }
 
+}
+
+.rp-card-section {
+    padding-bottom: 0;
+}
+
+@media (min-width: 1366px) {
+    .rp-report-section-title {
+        padding: 0 60px;
+        column-count: 2;
+        column-rule: solid 1px lightgrey;
+    }
+
+    .rp-card-section {
+        break-inside: avoid-column;
+    }
 }
