36 - Fixed Arches link

--- a/src/arches_fossils/arches_fossils/templates/index.htm
+++ b/src/arches_fossils/arches_fossils/templates/index.htm
@@ -332,7 +332,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 <!-- Footer -->
 <footer class="footer">
     <div class="arches_footer">
-        <a class="arches_link" target="archesproject" href="archesproject.org" >
+        <a class="arches_link" target="archesproject" href="https://archesproject.org" >
             <img class="arches_logo"
                  src="{% webpack_static 'img/logo/arches/Arches_badge_white_powered_by_2.png' %}" alt="Powered by Arches logo">
         </a>
