--- a/src/arches_bchp/arches_bchp/templates/index.htm
+++ b/src/arches_bchp/arches_bchp/templates/index.htm
@@ -219,7 +219,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img src="{% webpack_static 'img/front/2023-05-01_screenshot_search.png' %}"  alt="Arches Designer">
+                        <img src="{% webpack_static 'img/front/figure1_map.jpg' %}"  alt="BCRHP Arches search screenshot">
                         <figcaption>Figure 1: Interactive BC map of historic places.</figcaption>
                     </figure>
 
@@ -273,7 +273,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img class="sub-block-image" src="{% webpack_static 'img/front/2023-04-02_screenshot_lg.png' %}" alt="Arches Workflows">
+                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure2_filter.jpg' %}" alt="Arches Workflows">
                         <figcaption>{% trans "Figure 2: Filter your searches by resource type using the dropdown menu." %}</figcaption>
                     </figure>
 
@@ -323,7 +323,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img class="sub-block-image" src="{% webpack_static 'img/front/2023-04-03_screenshot-fedgov.png' %}" alt='{% trans "Screenshot of Arches highlighted site" %} '>
+                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure4_popup.jpg' %}" alt='{% trans "Screenshot of Arches highlighted site" %} '>
                         <figcaption>{% trans "Figure 4: An ARCHES highlighted site (Dominion Astrophysical Observatory) shown with location card pop-up." %}</figcaption>
                     </figure>
                 </div>
