--- a/src/arches_bchp/arches_bchp/templates/index.htm
+++ b/src/arches_bchp/arches_bchp/templates/index.htm
@@ -46,7 +46,6 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
     <link href="{% webpack_static 'css/index.css' %}" rel="stylesheet">
     <link href="{% webpack_static 'css/project.css' %}" rel="stylesheet">
     <link href="{% webpack_static 'css/bc_index.css' %}" rel="stylesheet">
-    <link href="{% webpack_static 'css/main.css' %}" rel="stylesheet">
     {% if app_settings.ACCESSIBILITY_MODE %}
     <link href="{% webpack_static 'css/accessibility.css' %}" rel="stylesheet">
     {% endif %}
@@ -59,9 +58,6 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
         <nav class="v5-splash-navbar navbar" role="navigation">
             <div class="feedback-bar">{% blocktrans %}Welcome to the new BC Register of Historic Places System{% endblocktrans %}</div>
             <div class="container-fluid">
-                <div class="navbar-header" >
-
-                </div>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false" aria-controls="myNavbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -70,12 +66,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <span class="icon-bar"></span>
                     </button>
 
-
                     <div class="relative nav-brand-container">
                         <div class="navbar-brand-v5-icon-container">
                             <a href="https://www2.gov.bc.ca/gov/content/home" target="BCGov Home">
-                                <img class="navbar-brand-v5-icon"
-                                     src="{% webpack_static 'img/logo/BCID_H_rgb_rev.png' %}" alt="BC Government Logo">
+                                <img class="navbar-brand-v5-icon" src="{% webpack_static 'img/logo/BCID_H_rgb_rev.png' %}" alt="BC Government Logo">
                             </a>
                             <h1>{% blocktrans %}BC Register of Historic Places {% endblocktrans %}</h1>
                         </div>
@@ -89,19 +83,15 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <li>
                             <a href="#info-block-1">{% trans "About" %}</a>
                         </li>
+                        {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                         <li>
                             <a href="{% url 'search_home' %}">{% trans "Search Sites" %}</a>
                         </li>
-                        {% if user|can_create_resource_instance and user.username != 'anonymous' %}
                             <li>
                                 <a href="{% url 'resource' %}" target="_blank">{% trans "Manage" %}</a>
                             </li>
                         {% endif %}
-                        {% if user.username == 'anonymous' %}
-                            <li>
-                                <a class="application-login" id="auth-link" href="{% url 'auth' %}?next={% url 'home' %}{% if user.username != 'anonymous' %}&logout=true{% endif %}">{% trans "Sign in" %}</a>
-                            </li>
-                        {% else %}
+                        {% if user.username %}
                             <li>
                                 <a class="auth-welcome" href="{% url 'user_profile_manager' %}">
                                     {% trans "Welcome, " %} {{ user.first_name|default:user.username }}
@@ -168,20 +158,21 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                 <!-- Splash Screen -->
                 <div class="fullscreenbanner-container">
-                    <h3 class="fullscreenbanner">
+                    <div class="fullscreenbanner">
                         <ul>
                             <!-- SLIDE 1 -->
                             <li data-transition="fade" data-slotamount="9" data-masterspeed="0" data-title="Slide 1">
                                 <!-- MAIN IMAGE -->
-<!--                                <img src="{% webpack_static 'img/front/EC1-CARRfront4x6.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">-->
-<!--                                <img src="{% webpack_static 'img/front/BV1-STREETwSTAGE5x7.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">-->
                                 <img src="{% webpack_static 'img/front/GM4-INtheMILL5x6.png' %}" alt="slidebg1" data-bgfit="cover" data-bgposition="top center" data-bgrepeat="no-repeat">
                                 <!-- LAYERS -->
                                 <!-- NEW LAYER -->
                                 <div class="tp-caption sft start text-bold bc-splash-caption" delay="4500" data-hoffset="0" data-y="400" data-speed="800" data-start="100" data-easing="Back.easeInOut" data-endspeed="300" data-x="0">
                                     <h2>{% blocktrans %}BC Register of Historic Places{% endblocktrans %}</h2>
                                     <h3>{% trans "Official Register of historic places for British Columbia" %}</h3>
-                                    <h4 class="area-description">BC Register of Historic Places records historic places that have been officially recognized by the provincial, federal or local / regional governments for their heritage value.</h4>
+                                    <!-- this is a workaround for a layout issue causing the section to not be limited -->
+                                    <h4 class="area-description"><span>{% blocktrans %}BC Register of Historic Places records historic places that have been officially
+                                        recognized by the provincial, federal or local / regional governments for their heritage value.{% endblocktrans %}</span></h4>
+<!--                                    <h4 class="area-description">{% trans "BC Register of Historic Places records historic places that have been officially recognized by the provincial, federal or local " %}</h4>-->
                                 </div>
 
                                 <!-- Gradient -->
