--- a/src/arches_common/media/css/bc_index.css
+++ b/src/arches_common/media/css/bc_index.css
@@ -4,7 +4,8 @@
     background: rgba(0, 0, 0, 0.6);
     padding: 5px !important;
     left: 10vw !important;
-    max-width: 50% !important;
+    max-width: 50vw !important;
+    min-width: max-content !important;
 }
 
 .vertical-nav-list-link:hover .vertical-nav-list-ref {
@@ -20,6 +21,7 @@
     width: unset !important;
     justify-content: unset !important;
 }
+
 .vertical-nav-list li {
     width: 300px;
     margin-bottom: 5px;
@@ -73,15 +75,74 @@
 .bc-splash-caption > h4 {
     color: white;
     text-align: right;
-    max-width:75%;
+    max-width:50vw;
     margin: 30px 0 0 auto;
     white-space: break-spaces;
     word-wrap: break-word;
 }
 
-.app-info-content {
-    margin-left: 400px;
-    margin-right: 400px;
+.app-info-block {
+    min-height: 600px;
+    padding: 80px 100px 140px 100px;
+    background: #fff;
+    border-top: 1px solid #ddd;
+}
+
+@media only screen and (min-width: 768px) {
+    .bc-splash-caption {
+        background: rgba(0, 0, 0, 0.6);
+        padding: 5px !important;
+        left: 10vw !important;
+        max-width: 50vw !important;
+        min-width: max-content !important;
+    }
+
+    .bc-splash-caption > h4 {
+        max-width:90% !important;
+    }
+    .app-info-content {
+        margin-left: 300px;
+        margin-right: 0;
+    }
+    .vertical-nav-container {
+        max-width: 275px ;
+        left: 5px;
+    }
+    ul.vertical-nav-list {
+        padding-left: 10px;
+    }
+    .app-info-block {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .bc-splash-caption > h4 {
+        max-width:75% !important;
+    }
+    .app-info-block {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .app-info-content {
+        margin-left: 350px;
+        margin-right: 150px;
+    }
+    .app-info-block {
+        padding-left: 100px;
+        padding-right: 100px;
+    }
+}
+
+@media only screen and (min-width: 1366px) {
+    .app-info-content {
+        margin-left: 350px;
+        margin-right: 350px;
+    }
 }
 
 .info-section {
